allow create token with project name too
